--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@angular/cli": "~7.3.5",
     "@angular/compiler-cli": "~7.2.9",
     "@angular/language-service": "~7.2.9",
-    "@types/node": "~11.11.3",
     "@types/jasmine": "~3.3.9",
     "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~11.11.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -44,6 +44,6 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.0.3",
     "tslint": "~5.14.0",
-    "typescript": "~3.3.3333"
+    "typescript": "3.1.6"
   }
 }
